Expose VITE_API_BASE_URL for Pages build

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
         run: npm ci
       - name: Build (GitHub Pages)
         run: npm run build:pages
+        env:
+          VITE_API_BASE_URL: ${{ vars.VITE_API_BASE_URL }}
       - name: SPA fallback
         run: cp dist/index.html dist/404.html
       - name: Upload artifact
