--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,13 @@
       "**/node_modules/**"
     ],
     "rewrites": [
+      {
+        "source": "/api/**",
+        "run": {
+          "serviceId": "profgui",
+          "region": "europe-west1"
+        }
+      },
       { "source": "**", "destination": "/index.html" }
     ]
   }
